Fixed code
Fixed a code where the search bar is overflowing in smaller screens

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -78,16 +78,17 @@ main{
             }
             .search-form{
                 display: flex;
-                flex: 1;
+                // flex: 1;
+                width: 100%;
             }
             input{
                 font-size: .875rem;
                 margin: 0 1em;
                 padding: 1em;
-                flex: 1;
                 background: none;
                 border: none;
                 border-bottom: 2px solid $grey-color;
+                width: 100%;
             }
             button{
                 display: flex;
